# python-exercism

./: LICENSE  README.md  README.rst  armstrong  pyproject.toml
.github/workflows/: ci.yml
exercises/acronym/: acronym.py  acronym_test.py
exercises/allergies/: allergies_test.py
exercises/anagram/: anagram.py  anagram_test.py
exercises/armstrong-numbers/: armstrong_numbers.py  armstrong_numbers_test.py
exercises/atbash-cipher/: atbash_cipher.py  atbash_cipher_test.py
exercises/bob/: bob.py  bob_test.py
exercises/clock/: clock.py  clock_test.py
exercises/difference-of-squares/: difference_of_squares_test.py
exercises/flatten-array/: flatten_array.py  flatten_array_test.py
exercises/gigasecond/: gigasecond.py  gigasecond_test.py
exercises/grade-school/: grade_school.py  grade_school_test.py
exercises/grains/: grains.py  grains_test.py
exercises/hamming/: hamming.py  hamming_test.py
exercises/hello-world/: hello_world_test.py
exercises/high-scores/: high_scores_test.py
exercises/isbn-verifier/: isbn_verifier.py  isbn_verifier_test.py
exercises/isogram/: isogram.py  isogram_test.py
exercises/kindergarten-garden/: kindergarten_garden.py  kindergarten_garden_test.py
exercises/leap/: leap.py  leap_test.py
exercises/luhn/: luhn.py  luhn_test.py
exercises/markdown/: markdown.py  markdown_test.py
exercises/matrix/: matrix.py  matrix_test.py
exercises/meetup/: meetup.py  meetup_test.py
exercises/pangram/: pangram.py  pangram_test.py
exercises/raindrops/: raindrops.py  raindrops_test.py
exercises/robot-name/: robot_name.py  (+1 more)
(+29 files in other folders)
