[tool.poetry]
name = "python-exercism"
version = "0.1.0"
description = "Exercism exercises in Python."
authors = ["Roger Hughes <dart020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
pytest-flake8 = "^1.0.4"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
